Add description and tos

--- a/db/fixtures/companies.yml
+++ b/db/fixtures/companies.yml
@@ -3,6 +3,51 @@ company_1:
   name: "FJORD, LLC"
   description: "合同会社フィヨルド"
   website: "http://fjord.jp"
+  tos: "秘密保持契約書 　　　__COMPANY_NAME__（以下「甲」という）と__USER_NAME__（以下「乙」という）とは、甲が業務を乙に委託し、乙がこれを実施する事に関連して、甲から乙に対しまたは乙から甲に対し開示される秘密情報、個人情報の取扱いに関し、次の通り契約を締結する。
+  
+  第１条（秘密情報）
+  
+  本契約において秘密情報（以下「本秘密情報」という）とは、文書・口頭その他有形無形を問わず、本件に関連して甲および乙のうち情報を開示する側（以下「情報開示者」という）から甲および乙のうちその開示された情報を受領する側（以下「情報受領者」という）に対し、開示される一切の情報のうち、情報開示者が秘密情報として明示的に特定したものをいう。但し、次に定めるものは、本秘密情報から除外するものとする。
+  (1)情報開示者が開示した際に既に公知であった情報
+  (2)情報開示者が開示した後に情報受領者の責めによらないで公知となった情報
+  (3)情報開示者が開示した際に既に情報受領者が秘密保持義務を負うことなく保持していた情報
+  (4)情報受領者が秘密保持義務を負うことなく独自に第三者から入手した情報
+  (5)情報受領者が情報開示者から開示された情報によらずして独自に開発した情報
+  
+  第２条（個人情報）
+  本契約において個人情報（以下「本個人情報」という）とは「個人情報の保護に関する法律」第2条に定める情報で情報開示者が個人情報である旨を指定した情報をいい、公知であるかどうかは問わない。
+  
+  第３条（秘密情報、個人情報保持）
+  1．  情報受領者は、本秘密情報について厳に秘密を保持し、本件に関連して本秘密情報を必要とする情報受領者の役職員、情報受領者が依頼する弁護士・公認会計士・アドバイザー等（以下「本受領権者」という）以外の者に対し本秘密情報を一切開示または漏洩してはならず、また、本件に関連する以外の目的で本秘密情報を使用・流用してはならない。
+  2．  情報受領者は、本個人情報について厳に秘密を保持し、情報開示者の書面による承諾を得ることなく、本件に関連する以外の目的のために利用し、または第三者に利用させ、もしくは開示、漏洩をしてはならない。また本受領権者に開示する場合にも情報開示者の書面による承諾を得るものとする。
+  3．情報受領者が法令、規則、裁判所の決定・命令、行政庁の命令・指示等により本秘密情報、本個人情報の開示を要求された場合には、情報受領者は、情報開示者に対しその旨を直ちに通知することにより、情報開示者に、本秘密情報、本個人情報の開示・公開に反対するための手続きを行う機会を与えるものとする。この場合、情報開示者は、本秘密情報、本個人情報の機密性を確保するためにとりうる一切の措置を適切かつ迅速に行うことが出来るものとする。また、情報受領者がかかる開示を行う場合においても、法律上要求される必要最小限の内容、範囲と認められる部分についてのみ開示を行わなければいけない。
+  
+  第４条（本受領権者に対する開示）
+  前条第1項に従い、情報受領者が本受領権者に本秘密情報、本個人情報の開示を行う場合には、情報受領者は、本秘密情報、本個人情報の機密性について本受領権者に対し十分かつ適切に説明し、本秘密情報、本個人情報について本契約による情報受領者の義務と同様の秘密保持義務（以下「本秘密保持義務」という）を負うことを確認するものとする。
+  
+  第５条（秘密情報、個人情報の管理）
+  情報受領者は、本秘密情報、本個人情報（本秘密情報、本個人情報の記録された記録媒体・複写・複製・翻訳物で、情報開示者に返還可能または返還不能のいずれであるかを問わない。以下本状及び次条第１項から第３項までの条項において同じ）を、本受領権者以外の者が接触・閲覧およびアクセスできないように、厳重に保管・管理しなければならない。
+  
+  第６条（秘密情報、個人情報の返還）
+  １．情報受領者は、本秘密情報、本個人情報のうち返還可能なものについては、情報開示者が要求したときは直ちに、情報開示者の指示に従い、原本およびその写しの一切を、情報開示者に返還しなければならないものとする。
+  ２．情報受領者は、本秘密情報、本個人情報のうち返還不能なものについては、情報開示者が要求したときは直ちに、情報開示者の指示に従い、その一切を消去・廃棄処分しなければならないものとする。
+  ３．情報受領者は、前２項により本秘密情報、本個人情報を返還または消去・廃棄した後においても、かかる本秘密情報、本個人情報の内容に関し、本契約に基づく秘密保持義務に服するものとする。
+  ４．本秘密情報、本個人情報に該当しない情報等については、情報受領者は情報開示者に対して前３項の返還、消去・廃棄処分、秘密保持の義務を負わないものとする。
+  
+  第７条（関係者への遵守徹底）
+  甲は、乙の秘密情報、個人情報を知る事となる自己の役員、業務員に、本契約の内容を遵守させるものとする。
+  
+  第８条（非保証）
+  甲および乙は、本契約の締結によっては、本件に関し、本契約に定めるもの以外は相互に何らの権利を取得し、または義務を負うものではないことを相互に認める。
+  
+  第９条（有効期限）
+  本契約の有効期限は、本契約の締結の日から１年間とする。但し、甲または乙が期間満了の１ヶ月前までに相手方に対し書面による本契約を終了させる旨の通知を行わなかった場合には、本契約は１年間延長されるものとし、以後も同様とする。尚、本契約終了後も２年間は、本契約に基づく秘密保持義務は存続するものとする。
+  
+  第１０条（準拠法）
+  本契約は日本法を準拠法とし、かつこれに従い解釈されるものとする。
+  
+  第１１条（協議）
+  本契約に定めのない事項に関しては、甲乙別途協議のうえ円満に解決を図るものとする。 "
 
 company_2:
   id: 2
