--- a/db/fixtures/users.yml
+++ b/db/fixtures/users.yml
@@ -11,6 +11,7 @@ komagata:
   blog_url: http://komagata.org
   job_cd: 0
   company_id: 1
+  description: "平日１０〜１９時勤務です。"
 
 machida:
   id: 2
@@ -25,3 +26,4 @@ machida:
   blog_url:
   job_cd: 1
   company_id: 1
+  description: "月曜日と木曜日の午前中勤務です。"
