--- a/db/fixtures/users.yml
+++ b/db/fixtures/users.yml
@@ -12,6 +12,7 @@ komagata:
   job_cd: 0
   company_id: 1
   description: "平日１０〜１９時勤務です。"
+  created_at: <%= Date.today %>
 
 machida:
   id: 2
@@ -27,3 +28,4 @@ machida:
   job_cd: 1
   company_id: 1
   description: "月曜日と木曜日の午前中勤務です。"
+  created_at: <%= (Date.today - 7) %>
