--- a/db/fixtures/users.yml
+++ b/db/fixtures/users.yml
@@ -9,6 +9,7 @@ komagata:
   twitter_url: http://twitter.com/komagata
   facebook_url: http://www.facebook.com/komagata1111
   blog_url: http://komagata.org
+  feed_url: http://docs.komagata.org/index.atom
   job_cd: 0
   company_id: 1
   description: "平日１０〜１９時勤務です。"
@@ -24,7 +25,8 @@ machida:
   last_name: Machida
   twitter_url: http://twitter.com/machida
   facebook_url:
-  blog_url:
+  blog_url: http://machida.fjord.jp/
+  feed_url: http://machida.fjord.jp/feed
   job_cd: 1
   company_id: 1
   description: "月曜日と木曜日の午前中勤務です。"
