Add a sleep flug

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,6 +6,7 @@ komagata:
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
   salt: zW3kQ9ubsxQQtzzzs4ap
   updated_at: <%= Time.new(2014, 1, 10, 0, 0, 0) %>
+  sleep: false
 
 machida:
   login_name: machida
@@ -15,3 +16,12 @@ machida:
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
   salt: zW3kQ9ubsxQQtzzzs4ap
   updated_at: <%= Time.new(2014, 1, 1, 0, 0, 0) %>
+
+sleeper:
+  login_name: sleeper
+  first_name: Netarou
+  last_name: Sannen
+  email: netarou@fjord.jp
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
+  salt: zW3kQ9ubsxQQtzzzs4ap
+  sleep: true
