Add NDA in user

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,6 +7,7 @@ komagata:
   salt: zW3kQ9ubsxQQtzzzs4ap
   updated_at: <%= Time.new(2014, 1, 10, 0, 0, 0) %>
   sleep: false
+  nda: true
 
 machida:
   login_name: machida
@@ -16,6 +17,7 @@ machida:
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
   salt: zW3kQ9ubsxQQtzzzs4ap
   updated_at: <%= Time.new(2014, 1, 1, 0, 0, 0) %>
+  nda: true
 
 sleeper:
   login_name: sleeper
@@ -25,3 +27,4 @@ sleeper:
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
   salt: zW3kQ9ubsxQQtzzzs4ap
   sleep: true
+  nda: true
