--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,7 +48,7 @@ UselessAssignment:
   Enabled: false
 
 Style/StringLiterals:
-  EnforcedStyle: double_quotes
+  EnforcedStyle: single_quotes
 
 Style/AlignParameters:
   EnforcedStyle: with_fixed_indentation
