--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,10 @@
+AllCops:
+  Exclude:
+    - db/schema.rb
+    - 'node_modules/**/*'
+    - 'db/migrate/**/*'
+    - 'vender/assets/**/*'
+
 # tolerant of https://github.com/airbnb/ruby styles
 LineLength:
   Max: 128
@@ -68,9 +75,3 @@ Style/GuardClause:
 CoffeeScript:
   Enabled: true
   config_file: config/.coffeelint.json
-
-AllCops:
-  Exclude:
-    - db/schema.rb
-    - 'node_modules/**/*'
-    - 'db/migrate/**/*'
