--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fjordllc/interns#readme",
   "devDependencies": {
+    "autosize": "^3.0.15",
     "highlight.js": "^9.1.0",
     "markdown-it": "^5.1.0",
     "markdown-it-emoji": "^1.1.0",
