--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
     "SLACK_WEBHOOK_URL":{
       "required":true
     },
+    "DEPLOY_TASKS":{
+      "required":true
+    },
     "TZ":{
       "required":true
     }
@@ -36,6 +39,7 @@
   "addons":[
     "sendgrid",
     "heroku-postgresql",
-    "newrelic"
+    "newrelic",
+    "papertrail"
   ]
 }
