--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "highlight.js": "^9.1.0",
     "markdown-it": "^5.1.0",
     "markdown-it-emoji": "^1.1.0",
+    "markdown-it-checkbox": "^1.1.0",
     "pygments-css": "^1.0.0"
   }
 }
