--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,7 @@ database:
     - bundle exec rake db:drop
     - bundle exec rake db:create RAILS_ENV=test
     - bundle exec rake db:migrate RAILS_ENV=test
+
+test:
+  post:
+    - bundle exec rake test
